[package]
name = "cli-todo"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cli-todo"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.7"
directories = "5.0"
ansi_term = "*"
